<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activities.ProfileActivity">

    <FrameLayout
        android:id="@+id/fragment_menu_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
    </FrameLayout>

    <!--<ImageView
        android:id="@+id/profile_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/placeholder_profile_icon"
        app:layout_constraintTop_toBottomOf="@+id/fragment_menu_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/profile_displayname"
        android:layout_marginTop="40dp"
        android:scaleType="centerCrop"
        android:background="@drawable/img"/>-->

    <android.support.v7.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:elevation="12dp"
        android:id="@+id/profile_avatar"
        app:cardCornerRadius="40dp"
        android:layout_centerHorizontal="true"
        app:layout_constraintTop_toBottomOf="@+id/fragment_menu_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/profile_displayname"
        android:layout_marginTop="40dp">
        <ImageView
            android:layout_height="100dp"
            android:layout_width="match_parent"
            android:id="@+id/profile_avatar_img"
            android:src="@drawable/placeholder_profile_icon"
            android:scaleType="centerCrop"/>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/profile_displayname"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/profile_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/profile_displayname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/profile_success"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/pass_changed"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/profile_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:textColor="@android:color/holo_red_dark"/>

    <EditText
        android:id="@+id/profile_email_field"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:hint="@string/e_mail"
        app:layout_constraintTop_toBottomOf="@+id/profile_success"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:ems="10"
        android:textAlignment="center"
        android:textSize="18sp"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/profile_password_field"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@+id/profile_email_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:ems="10"
        android:textAlignment="center"
        android:textSize="18sp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/profile_change_password_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/profile_password_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        android:textColor="@android:color/holo_red_dark"/>

</android.support.constraint.ConstraintLayout>